--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #6e3496;
+  /* --background: #6e3496; */
+  --background: #810a2c;
   --foreground: #0a0a0a;
 }
 
@@ -17,7 +18,6 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
