--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,8 @@
 
 :root {
   /* --background: #6e3496; */
-  --background: #810a2c;
+  /* --background: #810a2c; */
+  --background: #323232;
   --foreground: #0a0a0a;
 }
 
@@ -18,6 +19,14 @@
 body {
   color: var(--foreground);
   background: var(--background);
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 @layer utilities {
