many things, very many. moving to new dezain, new layouts, functions

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #000000;
   --container: #1c1c1e;
+  --border: #212121;
   --alternate: #808080;
   --foreground: #ffffff;
   --accent: #ff0006;
